--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <i class="fas fa-user"></i>
             </a>
             <div class="dropdown-menu dropdown-menu-right dropdown-info" aria-labelledby="navbarDropdownMenuLink-4">
-              <a class="dropdown-item" href="#">My account</a>
+              <a class="dropdown-item" href="#">Mi Cuenta</a>
               <a class="dropdown-item" href="#">Log out</a>
             </div>
           </li>
@@ -92,7 +92,7 @@
             <h1 class="heading display-3">Misk'i Wayu</h1>
             <h4 class="subheading font-weight-bold">Gelatinas hechos de pura fruta fortificado con Nostoc (cushuro).</h4>
             <div class="mr-auto">
-              <button type="button" class="btn btn-lily btn-margin btn-rounded">Comprar Ahora <i class="fas fa-caret-right ml-3"></i></button>
+              <button type="button" class="btn blue-gradient btn-margin btn-rounded"><a href="productos.html" style="color: white;">Conocer Más</a> <i class="fas fa-caret-right ml-3"></i></button>
             </div>
           </div>
   
