--- a/index.html
+++ b/index.html
@@ -17,102 +17,59 @@
 </head>
 
 <body class="">
-  <!------Menú------>
-
-  <!------Menú------>
   <!------Home----->
-<!-- Main navigation -->
-<header>
-
-    <!--Navbar -->
-    <nav class="navbar navbar-expand-lg scrolling-navbar navbar-light z-depth-0 fixed-top">
-      <a class="navbar-brand" href="#">
-        <img src="img/Logo2.png" alt="mdb logo">
-      </a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-4"
-        aria-controls="navbarSupportedContent-4" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <div class="navbar-nav ml-auto">
-            <a class="nav-item nav-link active" href="index.html">Home <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="productos.html">Productos</a>
-            <a class="nav-item nav-link" href="recetas.html">Recetas</a>
-            <a class="nav-item nav-link" href="nosotros.html">Nosotros</a>
-          </div>
-          <form class="form-inline my-2 my-lg-0">
-          <button class="btn btn-warning" type="submit">¿Donde compro?</button>
-          </form>
-      </div>  
-      <div class="collapse navbar-collapse" id="navbarSupportedContent-4">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <i class="fab fa-pinterest-p"></i>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <i class="fab fa-dribbble"></i>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <i class="fab fa-facebook-f"></i>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">
-              <i class="fab fa-instagram"></i>
-            </a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink-4" data-toggle="dropdown" aria-haspopup="true"
-              aria-expanded="false">
-              <i class="fas fa-user"></i>
-            </a>
-            <div class="dropdown-menu dropdown-menu-right dropdown-info" aria-labelledby="navbarDropdownMenuLink-4">
-              <a class="dropdown-item" href="#">Mi Cuenta</a>
-              <a class="dropdown-item" href="#">Log out</a>
-            </div>
-          </li>
-        </ul>
+  <!-- Main navigation -->
+  <header>
+    <!--Navbar-->
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
+      <div class="container">
+        <a class="navbar-brand" href="#"><strong>Miski Wayu</strong></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7"
+          aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="productos.html">Productos</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Nosotros</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
-    <!--/.Navbar -->
-  
-    <!-- Intro -->
-    <section class="view">
-  
-      <div class="row">
-  
-        <div class="col-md-6">
-  
-          <div class="d-flex flex-column justify-content-center align-items-center h-100">
-            <h1 class="heading display-3">Misk'i Wayu</h1>
-            <h4 class="subheading font-weight-bold">Gelatinas hechos de pura fruta fortificado con Nostoc (cushuro).</h4>
-            <div class="mr-auto">
-              <button type="button" class="btn blue-gradient btn-margin btn-rounded"><a href="productos.html" style="color: white;">Conocer Más</a> <i class="fas fa-caret-right ml-3"></i></button>
+    <!-- Navbar -->
+    <!-- Full Page Intro -->
+    <div class="view jarallax" data-jarallax='{"speed": 0.2}' style="background-image: url('img/FondoPrincipal.png'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
+      <!-- Mask & flexbox options-->
+      <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
+        <!-- Content -->
+        <div class="container">
+          <!--Grid row-->
+          <div class="row">
+            <!--Grid column-->
+            <div class="col-md-12 mb-4 white-text text-center">
+              <h1 class="h1-reponsive white-text text-uppercase font-weight-bold mb-0 pt-md-5 pt-5 wow fadeInDown"
+                data-wow-delay="0.3s"><strong>Misk'i Wayu</strong></h1>
+              <hr class="hr-light my-4 wow fadeInDown" data-wow-delay="0.4s">
+              <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>Nutricíon divertida</strong></h5>
+              <a class="btn btn-outline-white wow fadeInDown" data-wow-delay="0.4s">Conocer más</a>
+              <a class="btn btn-outline-white wow fadeInDown" data-wow-delay="0.4s">Productos</a>
             </div>
+            <!--Grid column-->
           </div>
-  
+          <!--Grid row-->
         </div>
-  
-        <div class="col-md-6">
-  
-          <div class="view">
-            <img src="img/banner1.png" class="img-fluid" alt="smaple image">
-            <div class="mask flex-center hm-gradient">
-            </div>
-          </div>
-  
-        </div>
-  
+        <!-- Content -->
       </div>
-  
-    </section>
-    <!-- Intro -->
-  
+      <!-- Mask & flexbox options-->
+    </div>
+    <!-- Full Page Intro -->
   </header>
   <!-- Main navigation -->
   <!------Home------>
