--- a/productos.html
+++ b/productos.html
@@ -14,14 +14,15 @@
   <link href="css/mdb.min.css" rel="stylesheet">
   <!-- Your custom styles (optional) -->
   <link href="css/style.css" rel="stylesheet">
+  <link href="css/styleprod.css" rel="stylesheet">
 </head>
 
 <body class="">
   <!------Menú------>
   <!-- Main navigation -->
-  <header>
+  <header style="height: 5%;">
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar" style="background: #6351ce !important;">
       <div class="container">
         <a class="navbar-brand" href="#"><strong>Miski Wayu</strong></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7"
@@ -37,7 +38,10 @@
               <a class="nav-link" href="productos.html">Productos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Nosotros</a>
+              <a class="nav-link" href="recetas.html">Recetas</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contactanos.html">Contactanos</a>
             </li>
           </ul>
         </div>
@@ -538,7 +542,7 @@
             <h6 class="text-uppercase font-weight-bold">Contacto</h6>
             <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
             <p>
-              <i class="fas fa-home mr-3"></i> Villa el Salvador, Lima, PE</p>
+              <i class="fas fa-home mr-3"></i> La Molina, Lima, PE</p>
             <p>
               <i class="fas fa-envelope mr-3"></i> ventas@miskiwayu.com</p>
             <p>
