--- a/recetas.html
+++ b/recetas.html
@@ -14,14 +14,15 @@
   <link href="css/mdb.min.css" rel="stylesheet">
   <!-- Your custom styles (optional) -->
   <link href="css/style.css" rel="stylesheet">
+  <link href="css/styleprod.css" rel="stylesheet">
 </head>
 
-<body>
-  <!------Home----->
+<body class="">
+  <!------Menú------>
   <!-- Main navigation -->
-  <header>
+  <header style="height: 5%;">
     <!--Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar">
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar" style="background: #6351ce !important;">
       <div class="container">
         <a class="navbar-brand" href="#"><strong>Miski Wayu</strong></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7"
@@ -40,46 +41,22 @@
               <a class="nav-link" href="recetas.html">Recetas</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contactanos.html">Contactanos</a>
+              <a class="nav-link" href="contactanos.html">Contáctanos</a>
             </li>
           </ul>
         </div>
       </div>
     </nav>
     <!-- Navbar -->
-    <!-- Full Page Intro -->
-    <div class="view jarallax" data-jarallax='{"speed": 0.2}' style="background-image: url('img/FondoPrincipal.png'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
-      <!-- Mask & flexbox options-->
-      <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
-        <!-- Content -->
-        <div class="container">
-          <!--Grid row-->
-          <div class="row">
-            <!--Grid column-->
-            <div class="col-md-12 mb-4 white-text text-center">
-              <h1 class="h1-reponsive white-text text-uppercase font-weight-bold mb-0 pt-md-5 pt-5 wow fadeInDown"
-                data-wow-delay="0.3s"><strong>Misk'i Wayu</strong></h1>
-              <hr class="hr-light my-4 wow fadeInDown" data-wow-delay="0.4s">
-              <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>Nutricíon divertida</strong></h5>
-              <a class="btn btn-outline-white wow fadeInDown" data-wow-delay="0.4s">Conocer más</a>
-              <a class="btn btn-outline-white wow fadeInDown" data-wow-delay="0.4s">Productos</a>
-            </div>
-            <!--Grid column-->
-          </div>
-          <!--Grid row-->
-        </div>
-        <!-- Content -->
-      </div>
-      <!-- Mask & flexbox options-->
-    </div>
-    <!-- Full Page Intro -->
   </header>
   <!-- Main navigation -->
-  <!------Home------>
+  <!------Menú-----======================================-->
 
+  <!------Sección de: ----->
 
+  <!------Sección de: ------>
 
-  <!-- Footer -->
+  <!-- Footer -==========================================-->
   <footer class="page-footer font-small unique-color-dark">
 
       <div style="background-color: #6351ce;">
