--- a/contactanos.html
+++ b/contactanos.html
@@ -31,7 +31,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
@@ -40,7 +40,7 @@
             <li class="nav-item">
               <a class="nav-link" href="recetas.html">Recetas</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="contactanos.html">Contáctanos</a>
             </li>
           </ul>
@@ -52,7 +52,7 @@
   <!-- Main navigation -->
   <!------Menú-----======================================-->
 
-  <!------Sección de: ----->
+  <!------Sección de: Contacto----->
     <!-- Section: Contact v.1 -->
     <section class="container my-5">
 
@@ -160,7 +160,7 @@
 
     </section>
     <!-- Section: Contact v.1 -->
-  <!------Sección de: ------>
+  <!------Sección de: Contacto------>
 
   <!-- Footer -==========================================-->
   <footer class="page-footer font-small unique-color-dark">
@@ -257,10 +257,10 @@
             <h6 class="text-uppercase font-weight-bold">Enlaces útiles</h6>
             <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
             <p>
-              <a href="#!">Tu cuenta</a>
+              <a href="#!">Productos</a>
             </p>
             <p>
-              <a href="#!">Afíliate a nostros</a>
+              <a href="#!">Recetas</a>
             </p>
             <p>
               <a href="#!">Nosotros</a>
