--- a/index.html
+++ b/index.html
@@ -50,19 +50,22 @@
     <!-- Full Page Intro -->
     <div class="view jarallax" data-jarallax='{"speed": 0.2}' style="background-image: url('img/FondoPrincipal.png'); background-repeat: no-repeat; background-size: cover; background-position: center center;">
       <!-- Mask & flexbox options-->
-      <div class="mask rgba-black-light d-flex justify-content-center align-items-center">
+      <div class="mask rgba-black-light d-flex justify-content-center align-items-center" style="background-color: rgba(0, 0, 0, 0.3);">
         <!-- Content -->
         <div class="container">
           <!--Grid row-->
           <div class="row">
             <!--Grid column-->
             <div class="col-md-12 mb-4 white-text text-center">
-              <h1 class="h1-reponsive white-text text-uppercase font-weight-bold mb-0 pt-md-5 pt-5 wow fadeInDown"
-                data-wow-delay="0.3s"><strong>Misk'i Wayu</strong></h1>
-              <hr class="hr-light my-4 wow fadeInDown" data-wow-delay="0.4s">
-              <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>Nutricíon divertida</strong></h5>
-              <a class="btn btn-outline-white wow fadeInDown" data-wow-delay="0.4s">Conocer más</a>
-              <a class="btn btn-outline-white wow fadeInDown" data-wow-delay="0.4s">Productos</a>
+              <div class="transbox">
+                  <h1 class="h1-reponsive white-text text-uppercase font-weight-bold mb-0 pt-md-5 pt-5 wow fadeInDown" style="/*text-shadow: -2px 0 grey, 0 2px grey, 2px 0 grey, 0 -2px grey;*/"
+                  data-wow-delay="0.3s"><strong>Misk'i Wayu</strong></h1>
+                <hr class="hr-light my-4 wow fadeInDown" data-wow-delay="0.4s">
+                <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>Nutricíon divertida</strong></h5>
+                <a class="btn btn-outline-white wow fadeInDown" data-wow-delay="0.4s">Conocer más</a>
+                <a href="productos.html" class="btn btn-outline-white wow fadeInDown" data-wow-delay="0.4s">Productos</a>
+              </div>
+
             </div>
             <!--Grid column-->
           </div>
@@ -174,10 +177,10 @@
             <h6 class="text-uppercase font-weight-bold">Enlaces útiles</h6>
             <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
             <p>
-              <a href="#!">Tu cuenta</a>
+              <a href="#!">Productos</a>
             </p>
             <p>
-              <a href="#!">Afíliate a nostros</a>
+              <a href="#!">Recetas</a>
             </p>
             <p>
               <a href="#!">Nosotros</a>
