--- a/productos.html
+++ b/productos.html
@@ -31,10 +31,10 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent-7">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="productos.html">Productos</a>
             </li>
             <li class="nav-item">
@@ -520,10 +520,10 @@
             <h6 class="text-uppercase font-weight-bold">Enlaces útiles</h6>
             <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
             <p>
-              <a href="#!">Tu cuenta</a>
+              <a href="#!">Productos</a>
             </p>
             <p>
-              <a href="#!">Afíliate a nostros</a>
+              <a href="#!">Recetas</a>
             </p>
             <p>
               <a href="#!">Nosotros</a>
