nuevo fondo principal y recetas terminadas

--- a/recetas.html
+++ b/recetas.html
@@ -24,7 +24,7 @@
     <!--Navbar-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top scrolling-navbar" style="background: #6351ce !important;">
       <div class="container">
-        <a class="navbar-brand" href="#"><strong>Miski Wayu</strong></a>
+        <a class="navbar-brand" href="index.html"><strong>Miski Wayu</strong></a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent-7"
           aria-controls="navbarSupportedContent-7" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -185,6 +185,29 @@
       </section>
       <!-- Section: Blog v.1 -->
   <!------Sección de: Recetas------>
+
+  <nav>
+        <ul class="container pagination pg-purple">
+          <li class="page-item">
+            <a class="page-link" aria-label="Previous">
+              <span aria-hidden="true">&laquo;</span>
+              <span class="sr-only">Anterior</span>
+            </a>
+          </li>
+          <li class="page-item active"><a class="page-link">1</a></li>
+          <li class="page-item"><a class="page-link">2</a></li>
+          <li class="page-item"><a class="page-link">3</a></li>
+          <li class="page-item"><a class="page-link">4</a></li>
+          <li class="page-item"><a class="page-link">5</a></li>
+          <li class="page-item">
+            <a class="page-link" aria-label="Next">
+              <span aria-hidden="true">&raquo;</span>
+              <span class="sr-only">Siguiente</span>
+            </a>
+          </li>
+        </ul>
+      </nav>
+
 
   <!-- Footer -==========================================-->
   <footer class="page-footer font-small unique-color-dark">
