--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
               <a class="nav-link" href="recetas.html">Recetas</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contactanos.html">Contactanos</a>
+              <a class="nav-link" href="contactanos.html">Contáctanos</a>
             </li>
           </ul>
         </div>
@@ -228,16 +228,16 @@
             <h6 class="text-uppercase font-weight-bold">Enlaces útiles</h6>
             <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
             <p>
-              <a href="#!">Productos</a>
+              <a href="productos.html">Productos</a>
             </p>
             <p>
-              <a href="#!">Recetas</a>
+              <a href="recetas.html">Recetas</a>
             </p>
             <p>
-              <a href="#!">Nosotros</a>
+              <a href="contactanos.html">Contáctanos</a>
             </p>
             <p>
-              <a href="#!">Ayuda</a>
+              <a href="help.html">Ayuda</a>
             </p>
     
           </div>
