--- a/recetas.html
+++ b/recetas.html
@@ -90,9 +90,9 @@
             <!-- Excerpt -->
             <p>Para niños de 12 a 13 meses.</p>
             <!-- Post data -->
-            <p>Por <a><strong>Carina Ruiz</strong></a>, 22/10/2019</p>
+            <p>Por <a><strong>Carolina Ruiz</strong></a>, 22/10/2019</p>
             <!-- Read more button -->
-            <a class="btn btn-success btn-md">Leer más</a>
+            <a href="Recetas/mix-de-verduras.html" class="btn btn-success btn-md">Leer más</a>
       
           </div>
           <!-- Grid column -->
@@ -119,7 +119,7 @@
             <!-- Post data -->
             <p>Por <a><strong>Caleb Cuenca</strong></a>, 23/10/2019</p>
             <!-- Read more button -->
-            <a class="btn btn-success btn-md mb-lg-0 mb-4">Leer más</a>
+            <a href="" class="btn btn-success btn-md mb-lg-0 mb-4">Leer más</a>
       
           </div>
           <!-- Grid column -->
