--- a/productos.html
+++ b/productos.html
@@ -43,6 +43,11 @@
             <li class="nav-item">
               <a class="nav-link" href="contactanos.html">Contáctanos</a>
             </li>
+            <li class="nav-item">
+              <a href="carro-de-compras.html" class="fb-ic">
+                <i class="fas fa-shopping-cart red-text"> </i>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
@@ -347,83 +352,6 @@
       </section>
       <!-- Section: Products v.1 -->
   <!------Productos------>
-
-<!--Check out-->  
-<!-- Button trigger modal-->
-<div class="container text-center">
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalCart">Pagar</button>
-</div>
-
-
-<!-- Modal: modalCart -->
-<div class="modal fade" id="modalCart" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-  aria-hidden="true">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <!--Header-->
-      <div class="modal-header">
-        <h4 class="modal-title" id="myModalLabel">Tu carro de compras</h4>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">×</span>
-        </button>
-      </div>
-      <!--Body-->
-      <div class="modal-body">
-
-        <table class="table table-hover">
-          <thead>
-            <tr>
-              <th>#</th>
-              <th>Product name</th>
-              <th>Price</th>
-              <th>Remove</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <th scope="row">1</th>
-              <td>Product 1</td>
-              <td>100$</td>
-              <td><a><i class="fas fa-times"></i></a></td>
-            </tr>
-            <tr>
-              <th scope="row">2</th>
-              <td>Product 2</td>
-              <td>100$</td>
-              <td><a><i class="fas fa-times"></i></a></td>
-            </tr>
-            <tr>
-              <th scope="row">3</th>
-              <td>Product 3</td>
-              <td>100$</td>
-              <td><a><i class="fas fa-times"></i></a></td>
-            </tr>
-            <tr>
-              <th scope="row">4</th>
-              <td>Product 4</td>
-              <td>100$</td>
-              <td><a><i class="fas fa-times"></i></a></td>
-            </tr>
-            <tr class="total">
-              <th scope="row">5</th>
-              <td>Total</td>
-              <td>400$</td>
-              <td></td>
-            </tr>
-          </tbody>
-        </table>
-
-      </div>
-      <!--Footer-->
-      <div class="modal-footer">
-        <button type="button" class="btn btn-outline-primary" data-dismiss="modal">Cerrar</button>
-        <button class="btn btn-primary">pagar</button>
-      </div>
-    </div>
-  </div>
-</div>
-<!-- Modal: modalCart -->
-<!--Check out-->  
 
   <!-- Footer -->
   <footer class="page-footer font-small unique-color-dark">
