--- a/mix-de-verduras.html
+++ b/mix-de-verduras.html
@@ -34,10 +34,10 @@
             <li class="nav-item">
               <a class="nav-link" href="index.html">Inicio <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item ">
               <a class="nav-link" href="productos.html">Productos</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="recetas.html">Recetas</a>
             </li>
             <li class="nav-item">
@@ -58,7 +58,10 @@
   <!------Menú------>
 
   <!------Mix de verduras----->
-
+  <div class="container text-center">
+      <br>
+      <img src="img/Receta Mix-verduras.PNG" class="img-fluid" alt="Responsive image">
+  </div>
   <!------Mix de verduras------>
 
   <!-- Footer -->
