--- a/carro-de-compras.html
+++ b/carro-de-compras.html
@@ -97,7 +97,7 @@
             <!-- First row -->
             <tr>
               <th scope="row">
-                <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/13.jpg" alt="" class="img-fluid z-depth-0">
+                <img src="img/ProdFresa.png" alt="" class="img-fluid z-depth-0">
               </th>
               <td>
                 <h5 class="mt-3">
@@ -125,7 +125,7 @@
             <!-- Second row -->
             <tr>
               <th scope="row">
-                <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/6.jpg" alt="" class="img-fluid z-depth-0">
+                <img src="img/ProdMango.png" alt="" class="img-fluid z-depth-0">
               </th>
               <td>
                 <h5 class="mt-3">
@@ -153,7 +153,7 @@
             <!-- Third row -->
             <tr>
               <th scope="row">
-                <img src="https://mdbootstrap.com/img/Photos/Horizontal/E-commerce/Products/1.jpg" alt="" class="img-fluid z-depth-0">
+                <img src="img/ProdAguaymanto.png" alt="" class="img-fluid z-depth-0">
               </th>
               <td>
                 <h5 class="mt-3">
@@ -233,7 +233,7 @@
             <div class="col-md-6 col-lg-7 text-center text-md-right">
     
               <!-- Facebook -->
-              <a class="fb-ic">
+              <a href="https://www.facebook.com/miski.wayu.9" class="fb-ic">
                 <i class="fab fa-facebook-f white-text mr-4"> </i>
               </a>
               <!-- Twitter -->
