--- a/contactanos.html
+++ b/contactanos.html
@@ -181,7 +181,7 @@
             <div class="col-md-6 col-lg-7 text-center text-md-right">
     
               <!-- Facebook -->
-              <a class="fb-ic">
+              <a href="https://www.facebook.com/miski.wayu.9" class="fb-ic">
                 <i class="fab fa-facebook-f white-text mr-4"> </i>
               </a>
               <!-- Twitter -->
