--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                   data-wow-delay="0.3s"><strong>Misk'i Wayu</strong></h1>
                 <hr class="hr-light my-4 wow fadeInDown" data-wow-delay="0.4s">
                 <h5 class="text-uppercase mb-4 white-text wow fadeInDown" data-wow-delay="0.4s"><strong>Nutricíon divertida</strong></h5>
-                <a class="btn btn-outline-white wow fadeInDown" data-wow-delay="0.4s">Conocer más</a>
+                <a href="#porque" class="btn btn-outline-white wow fadeInDown" data-wow-delay="0.4s">Conocer más</a>
                 <a href="productos.html" class="btn btn-outline-white wow fadeInDown" data-wow-delay="0.4s">Productos</a>
               </div>
 
@@ -81,7 +81,7 @@
   <!------Home------>
 
   <!------Porque------>
-  <section class="container text-center my-5">
+  <section id="porque" class="container text-center my-5">
 
       <!-- Section heading -->
       <h2 class="h1-responsive font-weight-bold my-5">¿Por qué Misk'i Wayu?</h2>
@@ -152,7 +152,7 @@
             <div class="col-md-6 col-lg-7 text-center text-md-right">
     
               <!-- Facebook -->
-              <a class="fb-ic">
+              <a href="https://www.facebook.com/miski.wayu.9" class="fb-ic">
                 <i class="fab fa-facebook-f white-text mr-4"> </i>
               </a>
               <!-- Twitter -->
