--- a/productos.html
+++ b/productos.html
@@ -372,7 +372,7 @@
             <div class="col-md-6 col-lg-7 text-center text-md-right">
     
               <!-- Facebook -->
-              <a class="fb-ic">
+              <a href="https://www.facebook.com/miski.wayu.9" class="fb-ic">
                 <i class="fab fa-facebook-f white-text mr-4"> </i>
               </a>
               <!-- Twitter -->
@@ -426,16 +426,16 @@
             <h6 class="text-uppercase font-weight-bold">Productos</h6>
             <hr class="deep-purple accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
             <p>
-              <a href="#!">Gelatinas</a>
+              <a href="#!">Gelatinas de:</a>
             </p>
             <p>
-              <a href="#!">Gomitas</a>
+              <a href="#!">Fresa</a>
             </p>
             <p>
-              <a href="#!">Leathers</a>
+              <a href="#!">Naranja</a>
             </p>
             <p>
-              <a href="#!"></a>
+              <a href="#!">Mango</a>
             </p>
     
           </div>
@@ -472,7 +472,7 @@
             <p>
               <i class="fas fa-home mr-3"></i> La Molina, Lima, PE</p>
             <p>
-              <i class="fas fa-envelope mr-3"></i> ventas@miskiwayu.com</p>
+              <i class="fas fa-envelope mr-3"></i> ventasmiskiwayu@gmail.com</p>
             <p>
               <i class="fas fa-phone mr-3"></i> + 01 234 567 88</p>
             <p>
